--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -12,7 +12,7 @@ body {
 
 .sidebar {
     width: 230px;
-    height: 90%;
+    height: 85%;
     margin-left: 20px;
     background-color: #1a263d;
     display: flex;
@@ -124,6 +124,7 @@ body {
 .logo {
     width: 60px;
     object-fit: contain;
+    margin-top: 30px;
 }
 
 .sub-header {
@@ -255,7 +256,7 @@ table {
 th, td {
     text-align: left;
     padding: 15px;
-    font-size: 14px;
+    font-size: 13px;
     overflow-wrap: break-word;
     word-break: break-word;
 }
