--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -7,7 +7,6 @@ body {
 .container {
     display: flex;
     height: 100vh;
-    /* Removido overflow: hidden */
 }
 
 .sidebar {
@@ -154,44 +153,8 @@ body {
     gap: 10px;
     margin-top: 20px;
 }
-
-.search {
-    display: flex;
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 20px;
-    overflow: hidden;
-    height: 32px;
-    width: 200px;
-}
-
-.search input {
-    border: none;
-    outline: none;
-    flex: 1;
-    background: transparent;
-    font-size: 13px;
-    padding: 6px 10px;
-}
-
-.search button {
-    border: none;
-    background: none;
-    cursor: pointer;
-    padding: 0 8px;
-    display: flex;
-    align-items: center;
-}
-
-.search button img {
-    width: 16px;
-    opacity: 0.7;
-    transition: 0.2s;
-}
-
-.search button:hover img {
-    opacity: 1;
-    transform: scale(1.1);
+.acoes img {
+    width: 10px;
 }
 
 .novo {
@@ -215,32 +178,9 @@ body {
     color: #1a263d;
 }
 
-.filtro {
-    background-color: #d5be65;
-    border: none;
-    border-radius: 6px;
-    padding: 4px;
-    cursor: pointer;
-    width: 25px;
-    height: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.3s;
-}
-
-.filtro img {
-    width: 12px;
-    filter: brightness(0) invert(1);
-}
-
-.filtro:hover {
-    background-color: #1a263d;
-    transform: scale(1.05);
-}
-
 .tabela-container {
     flex: 1;
+    overflow-x: auto;
     overflow-y: auto;
     max-height: 50vh;
     margin-top: 20px;
@@ -250,19 +190,18 @@ body {
 }
 
 table {
-    width: 100%;
     border-collapse: collapse;
-    table-layout: fixed;
-    word-wrap: break-word;
     margin-top: 20px;
+    width: max-content;
+    min-width: 100%;
+
 }
 
 th, td {
     text-align: left;
     padding: 15px;
     font-size: 13px;
-    overflow-wrap: break-word;
-    word-break: break-word;
+    white-space: nowrap;
 }
 
 thead th {
@@ -285,13 +224,13 @@ tr:hover td {
 }
 
 td.acoes img {
-    width: 25px;
+    width: 50px;
     cursor: pointer;
-    transition: 0.2s;
+    transition: 0.2s ease-in-out;
 }
 
 td.acoes img:hover {
-    transform: scale(1.1);
+    transform: scale(1.3);
 }
 
 .input-redondo {
@@ -361,3 +300,4 @@ td.acoes img:hover {
 .botao-menu:hover {
     background-color: #d5be65;
 }
+
