--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -121,10 +121,13 @@ body {
 }
 
 .logo {
-    width: 60px;
+    width: 25px;
+    height: auto;
     object-fit: contain;
-    margin-top: 30px;
+    margin-top: 20px;
 }
+
+
 
 .sub-header {
     border-bottom: 1px solid black;
@@ -174,17 +177,7 @@ body {
     background-color: #d5be65;
     color: #1a263d;
 }
-/*antigo*/
-/*.tabela-container {*/
-/*    flex: 1;*/
-/*    overflow-x: auto;*/
-/*    overflow-y: auto;*/
-/*    max-height: 50vh;*/
-/*    margin-top: 20px;*/
-/*    border: 1px solid #ccc;*/
-/*    border-radius: 8px;*/
-/*    background-color: white;*/
-/*}*/
+
 
 .tabela-container {
     flex: 1;
