--- a/src/main/webapp/style-landing.css
+++ b/src/main/webapp/style-landing.css
@@ -28,6 +28,16 @@ header {
     height: 30px;
     width: auto;
 }
+#tecnologias{
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 50px;
+}
+
+#tecnologias p{
+    width: 900px;
+}
 
 .menu {
     display: flex;
@@ -129,6 +139,11 @@ header {
     padding-left: 20%;
 }
 
+.sobre-codcoz a{
+    color: #0a0f1e;
+    font-weight: 600;
+}
+
 
 .mais-aproveitamento {
     position: relative;
@@ -154,7 +169,6 @@ header {
     font-size: 4.0rem;
     font-weight: 700;
     line-height: 1.2;
-    margin-bottom: 40px;
     margin-top: 40px;
     max-width: 800px;
     padding-left: 20%;
@@ -174,14 +188,14 @@ header {
 .vantagens-codcoz {
     background-color: #0a0f1e;
     color: #e8c85d;
-    text-align: center;
+    text-align: left;
     padding: 80px 0;
 }
 
 .vantagens-codcoz h1 {
     font-size: 2.5rem;
     font-weight: 800;
-    margin-bottom: 40px;
+    margin-left: 150px;
 }
 
 .vantagens {
@@ -207,7 +221,7 @@ header {
 
 
 .vantagens article:hover {
-    transform: translateY(-5px);
+    transform: translateY(-10px);
     box-shadow: 0 8px 20px rgba(00, 0, 0, 1);
 
 }
@@ -221,11 +235,84 @@ header {
 }
 
 .vantagens p {
-    color: #e8c85d;
-    font-weight: 700;
-    width: 120px;
-    margin: 0;
+    color: #ffffff;
+    font-weight: 500;
+    width: 170px;
     text-align: center;
+    margin-top: 30px;
+}
+.container-funcionalidades{
+    display: flex;
+    justify-content: center;
+    gap: 150px;
+    background: linear-gradient(to bottom right, #0a0f1e, rgb(21, 28, 47), #0a0f1e);
+}
+.container-celulares{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 50px;
+    margin-bottom: 300px;
+    margin-right: 500px;
+}
+
+#default{
+    margin-left: 1000px;
+    width: 700px;
+}
+#desc1, #desc2, #desc3{
+    position: absolute;
+    color: transparent;
+    transition: transform 0.2s ease;
+    margin-left: 1000px;
+    width: 500px;
+}
+
+.container-funcionalidades article{
+    margin-left: 500px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    max-width: 400px;
+}
+
+
+.celular{
+    transition: transform 0.2s ease;
+    width: 200px; 
+    height: 400px;
+    position: absolute;
+}
+
+#cell1{
+    margin-right: 300px;
+}
+
+#cell2{
+    z-index: 1;
+}
+
+#cell3{
+    margin-left: 300px;
+}
+
+/* transicoes */
+
+.celular:hover{
+    transform: translateY(-50px);
+    z-index: 3;
+}
+
+#cell1:hover~#default,#cell2:hover~#default,#cell3:hover~#default{
+    color: transparent;
+}
+#cell1:hover~#desc1{
+    color: #eaeaea;
+}
+#cell2:hover~#desc2{
+    color: #eaeaea;
+}
+#cell3:hover~#desc3{
+    color: #eaeaea;
 }
 
 .divisor2{
@@ -240,7 +327,6 @@ header {
     justify-content: center;
     gap: 60px;
     padding: 100px 10%;
-    background-color: #0a0f1e;
     color: #e8c85d;
 }
 
@@ -326,6 +412,7 @@ header {
 
 .equipe{
     margin-left: 310px;
+    margin-bottom: 80px;
     font-size: 2.5rem;
     font-weight: 800;
     color: #e8c85d;
@@ -344,5 +431,7 @@ header {
     width: 60%;
     border-radius: 20px;
     margin-bottom: 150px;
+    border: #d4bc66 2px solid;
+    padding: 20px;
 }
 
