--- a/src/main/webapp/style-landing.css
+++ b/src/main/webapp/style-landing.css
@@ -36,7 +36,7 @@ header {
 }
 
 #tecnologias p{
-    width: 900px;
+    width: 800px;
 }
 
 .menu {
@@ -194,7 +194,7 @@ header {
 
 .vantagens-codcoz h1 {
     font-size: 2.5rem;
-    font-weight: 800;
+    font-weight: 600;
     margin-left: 150px;
 }
 
@@ -209,12 +209,12 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; /* centraliza verticalmente */
+    justify-content: center; 
     background-color: rgb(21, 32, 52);
     border-radius: 20px;
-    width: 220px;
-    height: 220px; /* define altura igual pra todos */
-    padding: 30px 20px;
+    width: 200px;
+    height: 200px;
+    padding: 50px 30px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     text-align: center;
 }
@@ -336,7 +336,7 @@ header {
 
 .historia-texto h2 {
     font-size: 2.5rem;
-    font-weight: 800;
+    font-weight: 600;
     color: #e8c85d;
     margin-bottom: 20px;
 }
@@ -411,10 +411,10 @@ header {
 }
 
 .equipe{
-    margin-left: 310px;
+    margin-left: 290px;
     margin-bottom: 80px;
     font-size: 2.5rem;
-    font-weight: 800;
+    font-weight: 600;
     color: #e8c85d;
 }
 .equipe-imagem{
